OHRM5X-2479: Develop language package import screen

--- a/installer/Migration/V5_7_0/lang-string/admin.yaml
+++ b/installer/Migration/V5_7_0/lang-string/admin.yaml
@@ -11,3 +11,6 @@ langStrings:
   -
     value: 'Sample XLIFF'
     unitId: sample_xliff
+  -
+    value: 'Import Language Package'
+    unitId: import_language_package
