OHRM5X-2477: Change the note in the "Add Language Pack" modal

--- a/installer/Migration/V5_7_0/lang-string/admin.yaml
+++ b/installer/Migration/V5_7_0/lang-string/admin.yaml
@@ -14,3 +14,6 @@ langStrings:
   -
     value: 'Import Language Package'
     unitId: import_language_package
+  -
+    value: 'The text will not translate automatically. You will either have to import translations or translate within the system.'
+    unitId: translate_text_manually
