OHRM5X-2477: Change the note in the "Add Language Pack" modal & Unit test failure

--- a/installer/Migration/V5_7_0/lang-string/admin.yaml
+++ b/installer/Migration/V5_7_0/lang-string/admin.yaml
@@ -16,4 +16,4 @@ langStrings:
     unitId: import_language_package
   -
     value: 'The text will not translate automatically. You will either have to import translations or translate within the system.'
-    unitId: translate_text_manually
+    unitId: translate_text_manually_note
